--- a/HTTP-SERVER-1/FetchApi/index.html
+++ b/HTTP-SERVER-1/FetchApi/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <script>
-        const getAnimalData = () =>{
-            console.log("This is Cat");
+        const getPersonData = async() =>{
+            const response = await fetch("https://fakerapi.it/api/v1/persons");
+            const persons = await response.json();
+            console.log(persons);
         }
     </script>
-    <button onclick="getAnimalData()">Get Animal Data</button>
+    <button onclick=getPersonData()>Get Person Data</button>
 </body>
 </html>
