--- a/HTTP-SERVER-1/FetchApi/index.html
+++ b/HTTP-SERVER-1/FetchApi/index.html
@@ -7,13 +7,23 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+    <button onclick=getPersonData()>Get Person Data</button>
+    <div id="container"></div>
     <script>
-        const getPersonData = async() =>{
+        // const getPersonData = () =>{
+        //     fetch("https://fakerapi.it/api/v1/persons")
+        //     .then((response)=>{
+        //         response.json()
+        //         .then((finalData)=>{
+        //             console.log(finalData);
+        //         });
+        //     })
+        // }
+        const getPersonData = async () =>{
             const response = await fetch("https://fakerapi.it/api/v1/persons");
             const persons = await response.json();
-            console.log(persons);
+            document.getElementById("container").innerHTML = JSON.stringify(persons.data);
         }
     </script>
-    <button onclick=getPersonData()>Get Person Data</button>
 </body>
 </html>
